--- a/config/ingestion.yml
+++ b/config/ingestion.yml
@@ -1,9 +1,11 @@
 dataset:
   dataset_id: demo_12w_2owners_example
   window:
-    mode: relative    # relative|absolute
+    mode: absolute    # relative|absolute
     weeks: 12
     end_date: null
+    dataset.window.start_date: 2025-10-01
+    dataset.window.end_date: 2025-12-31
 
 credentials:
   file: secrets/credentials.json
