--- a/config.yml
+++ b/config.yml
@@ -69,3 +69,33 @@ stage3:
     review_filename: review.json
     labels:
       allowed: ["correct", "partial", "incorrect", "unsure"]
+
+reconciliation:
+  enabled: true
+
+  store:
+    persistent_path: data/workflow_store.json
+    snapshot_name: workflow_store.snapshot.json
+
+  scope:
+    hiring_only: true
+    hiring_process_keys: ["recruiting", "hiring"]
+
+  reconcile:
+    match:
+      method: key_then_fuzzy
+      exact_key_fields: ["canonical_client", "canonical_role", "canonical_process"]
+      fuzzy_threshold: 0.88
+    evidence:
+      max_ids_per_instance: 200
+      timeline_fallback_max: 30
+
+  inference:
+    positional:
+      enabled: true
+      completed_label: completed_inferred
+
+  reports:
+    coverage_name: coverage_report.json
+    reconciliation_name: reconciliation_report.json
+    drift_name: mapping_drift_report.json
